--- a/src/EP.AspireApp.Cnab/EP.AspireApp.Cnab.AppHost/EP.AspireApp.Cnab.AppHost.csproj
+++ b/src/EP.AspireApp.Cnab/EP.AspireApp.Cnab.AppHost/EP.AspireApp.Cnab.AppHost.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="NewFolder\" />
+    <Folder Include="Features\NewFolder\" />
   </ItemGroup>
 
 </Project>
