--- a/src/WebSite/WebSite.csproj
+++ b/src/WebSite/WebSite.csproj
@@ -19,4 +19,8 @@
 		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.0-rc.1.25451.107" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Migrations\" />
+	</ItemGroup>
+
 </Project>
