--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,23 +2,29 @@ services:
   db:
     image: mcr.microsoft.com/mssql/server:2022-latest
     environment:
-      - ACCEPT_EULA=Y
-      - SA_PASSWORD=2Secure*Password2
-      - MSSQL_PID=Developer
+      ACCEPT_EULA: "Y"
+      SA_PASSWORD: "2Secure*Password2"
+      MSSQL_PID: "Developer"
     ports:
       - "1433:1433"
     volumes:
       - mssql-data:/var/opt/mssql
+    healthcheck:
+      test: ["CMD-SHELL", "pidof sqlservr"]
+      interval: 10s
+      timeout: 10s
+      retries: 20
 
   app:
     build: .
     depends_on:
-      - db
-    command: /bin/sh -c "sleep 30 && dotnet WebSite.dll"
+      db:
+        condition: service_healthy
     environment:
-      - ConnectionStrings__Database=Server=localhost,1433;Database=cnab;User Id=SA;Password=2Secure*Password2;TrustServerCertificate=true;
+      ConnectionStrings__Database: "Server=db,1433;Database=cnab;User Id=SA;Password=2Secure*Password2;TrustServerCertificate=true;"
     ports:
       - "5000:80"
+    command: ["dotnet", "WebSite.dll"]
 
 volumes:
   mssql-data:
