--- a/src/WebSite/appsettings.json
+++ b/src/WebSite/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Database": "Server=localhost,1433;Database=cnab;User Id=SA;Password=2Secure*Password2;TrustServerCertificate=true;"
+    "Database": "Server=db;Database=cnab;User Id=SA;Password=2Secure*Password2;TrustServerCertificate=true;"
   },
   "Logging": {
     "LogLevel": {
